<resources>
    <string name="app_name">rent-a-friend</string>
    <string name="title_home">Feeds</string>
    <string name="title_dashboard">Upload</string>
    <string name="title_notifications">register</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="upload">Upload</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">616729349240360</string>
    <string name="fb_login_protocol_scheme">fb616729349240360</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="chatIcon">chatIcon</string>
    <string name="mainImage">mainImage</string>
    <string name="testString_UserName">User Name</string>
    <string name="comment_section_holder">Comments will display here</string>
    <string name="full_name">full name</string>
    <string name="Full_Name">Full Name</string>
    <string name="createText">New User? Register Here</string>
    <string name="enter_comment_here">enter comment here</string>


</resources>
