<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feed_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/feed_card_user_icon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/user_icon" />


        <TextView
            android:id="@+id/feed_card_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/testString_UserName" />
    </LinearLayout>

    <ImageView
        android:id="@+id/feed_card_main_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/mainImage"
        android:src="@drawable/main_image" />

    <Button
        android:id="@+id/feed_card_comments_icon"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="@drawable/chat_icon"
        android:contentDescription="@string/chatIcon" />
</LinearLayout>